# agents-on-tmux

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: lint.yml  test.yml
docs/: recommended-tmux-config.md
src/: main.rs
src/backends/: agents.rs  config.rs  mod.rs  tmux.rs
src/frontends/: mod.rs
src/frontends/tui/: app.rs  event.rs  mod.rs  theme.rs  ui.rs
