[package]
name = "agents-on-tmux"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "aot"
path = "src/main.rs"

[dependencies]
thiserror = "2.0"
ratatui = "0.29"
crossterm = "0.29"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
